--- a/Web.config
+++ b/Web.config
@@ -15,7 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <customErrors mode="Off" />
+    <compilation debug="false" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
